--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p>Welcome {{user.name}}({{ user.username }})!!</p>
+    <p>Welcome {{ display_name }} ({{ user.username }})!!</p>
     <p>the auth user model is currently set to: {{ model }}</p>
     <br>
     <br>
